# cpp-aoc-2020

./: .clang-format  CMakeLists.txt  README.md  compile_commands.json
apps/: CMakeLists.txt  day1.cpp  day10.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp
include/aoc/: utils.hpp
inputs/: day3.txt  day6.txt
src/: CMakeLists.txt  utils.cpp
